refactor(ProductService): ProductService collect(Collectors.toList()) -> toList()